# logosai-ontology

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  COMPONENTS.md  LICENSE  PROBLEM_ANALYSIS.md  README.md  WORKFLOW_DESIGN.md  __init__.py  knowledge_graph_mermaid_20250620_205525.md  knowledge_graph_viz_20250620_210759.json  pyproject.toml  requirements.txt  run_tests.py  sample_knowledge_graph.json  sample_knowledge_graph.mmd  simple_kg_mermaid_20250620_211218.md  simple_kg_viz_20250620_205721.json  simple_kg_viz_20250620_211218.json  test_complete_query_processing.py  test_knowledge_graph_visualization.py  test_result_integration.py  test_simple_ontology.py  test_unified_system.py
config/: llm_config.yaml
core/: __init__.py  agent_metadata_extractor.py  agent_sync_service.py  context_manager.py  enhanced_query_processor.py  hybrid_agent_selector.py  interfaces.py  llm_config_loader.py  llm_manager.py  models.py  unified_query_processor.py
docs/: HYBRID_AGENT_SELECTION_PAPER.md  WORKFLOW_ORCHESTRATOR_DESIGN.md
engines/: __init__.py  enhanced_ontology_execution_engine.py  enhanced_ontology_workflow_designer.py  enhanced_query_decomposer.py  execution_engine.py  knowledge_graph.py  knowledge_graph_clean.py  semantic_query_manager.py  workflow_designer.py
examples/: advanced_usage.py  basic_usage.py
ml/: __init__.py  experience_buffer.py  gnn_encoder.py  intelligent_selector.py  rl_policy.py
orchestrator/: README.md  __init__.py  agent_registry.py  data_transformer.py  exceptions.py  execution_engine.py  models.py  plan_validator.py  progress_streamer.py  run_tests.sh  (+4 more)
(+39 files in other folders)
